--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier src --write"
+    "format": "prettier src --write",
+    "test": "jest"
   },
   "dependencies": {
     "next": "14.2.4",
@@ -15,15 +16,18 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "3.3.2",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.5",
     "typescript": "^5"
   }
 }
